@@ -1,6 +1,7 @@
 awslogs is mainly developed and maintained by Jorge Bastida <me@jorgebastida.com>
 
 A big thanks to all the contributors:
+Adam Johnson <me@adamj.eu>
 Angel Abad <angelabad@gmail.com>
 Álex González <agonzalezro@gmail.com>
 Eric Hayes <ejhayes@jacobianengineering.com>
