@@ -1,3 +1,6 @@
+* Add ``-S`` as shorthand for ``--no-stream`` and ``-G`` as shorthand for
+  ``--no-group``.
+
 0.4.0
 =====
 * Fix utf-8 issues
